--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -9,12 +9,76 @@
     {{!-- <!-- Bootstrap CSS --> --}}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 <link rel="stylesheet" href="style.css">
-    <title>Stargarnet LLC</title>
+    <title>Concealed Carry Holsters | Concealment Holsters | Alien Gear Holsters</title>
   </head>
-  
+<body>
+<div class="container my-container">
+
+<div class="row my-row" id="intro">
+{{!-- This is the top row from the example PDF. It is split into 3 columns --}}
+<div class="col">
+<div class="row rowLogoAndNavBar">
+<div class="col alienGearLogo"></div>
+<div class="col-sm-7 my-col navbarcell">
+<ul id="navbarlist">
+  <li class="navbarwhiteLinks" >SEARCH BY GUN </li>
+  <li class="navbarwhiteLinks">SHOP NOW</li>
+  <span id="extraSpace"> </span>
+  <li class="navbargreyLinks">Reviews</li>
+  <li class="navbargreyLinks">Blog</li>
+  <li class="navbargreyLinks">Videos</li>
+  <li class="navbargreyLinks" id="helplinkli">Help</li>
+  <li class="navbargreyLinks" id="contactuslinkli">Contact Us</li>
+ <li class="navbargreyLinks searchlinkli" ></li>
+ <li class="navbargreyLinks userli" ></li>
+ <li class="navbargreyLinks checkoutli" ></li>
+</ul>
+</div>{{!-- End navbarlist --}}
+</div>{{!-- End rowLogAndNavBar --}}
+<div class="row ">
+  <div class="col IWBHolsters align-self-end">
+    IWB Holsters
+  </div>
+</div>
+<div class="row ">
+<div class="col IWBsubTitle align-self-end">
+<p>The most advanced, most comfotable, most</p>
+<p>modluar holsters you'll ever wear.</p>
+</div>
+</div>
+
+
+<div class="row rowGreenLink">
+  <div class="col">
+    <a href="/test">SHOP ALL HOLSTERS</a>
+  </div>
+</div>
+
+</div>{{!-- End of column for intro row --}}
 
 
 
+
+
+
+{{!-- <div class="row my-row"></div>
+<div class="row my-row"></div> --}}
+
+</div>{{!-- End of intro --}}
+
+
+{{!-- Still under construction below --}}
+{{!-- <div class="row  my-row" id="whyAG"></div>
+
+<div class="row  my-row" id="magento"></div>
+
+<div class="row  my-row" id="FandB"></div>
+
+<div class="row  my-row" id="slider"></div>
+
+<div class="row  my-row" id="featuredProduct"></div> --}}
+
+</div> {{!-- End container --}}
 
     {{!-- <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS --> --}}
