got through magento

--- a/static/style.css
+++ b/static/style.css
@@ -28,7 +28,7 @@ The Alien Gear Logo and The Nav Bar
      min-width:100vh;
      background-image:url('darkPistolwithWood.jpg');
      background-repeat:no-repeat;
-     background-size:100%;
+     background-size:cover;
      background-position: center;
      margin:0;
      margin-right: 0;
@@ -155,11 +155,6 @@ padding:0;
 }
 
 
-/* 
-========================================================
-The IWB Holsters Text
-========================================================
- */
 
 
 
@@ -192,13 +187,6 @@ margin-bottom: -.1em;
 
 
 
-
-
-
-
-
-
-
 .rowGreenLink{
     padding-top:5.7em;
     padding-left:.9em;
@@ -212,3 +200,84 @@ margin-bottom: -.1em;
     font-size:.8em;
     
 }
+
+
+/* 
+========================================================
+Why AG is the leader block
+========================================================
+ */
+
+.whyAGImageDiv{
+    background-color: red;
+    margin-top:5rem;
+    margin-bottom:5rem;
+    margin-left:0;
+    margin-right:0;
+    padding:0;
+    text-align: end;
+
+}
+
+.greenWhyAilenGearISTheLeader{
+    margin-top:5rem;
+    margin-bottom:0rem;
+    margin-left:10rem;
+    margin-right:0;
+    padding-top:4rem;
+    padding-bottom:0;
+    font-family: Arial, Helvetica, sans-serif;
+    color:#63ce4f;
+    font-size:.8em;
+    
+}
+
+.whyAGBigText{
+    font-weight: lighter;
+    font-size:1.8em;
+    margin-top:0rem;
+    margin-bottom:0rem;
+    margin-left:10rem;
+    margin-right:3rem;
+    padding-top:1rem;
+    padding-right:10rem;
+}
+
+.whyAGsmallText{
+    font-weight: lighter;
+    margin-top:0rem;
+    margin-bottom:0rem;
+    margin-left:10rem;
+    margin-right:3rem;
+    padding-top:1rem;
+    padding-right:10rem;  
+}
+
+
+/* 
+========================================================
+Magento
+========================================================
+ */
+
+ #magento{
+    min-height:100vh;
+    min-width:100vh;
+    background-image:url('magentoScreenShot.jpg');
+    background-repeat:no-repeat;
+    background-size:contain;
+    background-position: center;
+    background-color:white;
+ }
+
+ #magento p{
+     color:red;
+     text-align: center;
+     padding:20rem;
+     margin:1rem;
+  
+ }
+
+ .yellowbackground{
+     background-color:yellow;
+ }
