--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -55,28 +55,35 @@
 </div>
 
 </div>{{!-- End of column for intro row --}}
-
-
-
-
-
-
-{{!-- <div class="row my-row"></div>
-<div class="row my-row"></div> --}}
-
 </div>{{!-- End of intro --}}
 
 
+
+<div class="row  my-row" id="whyAG">
+<div class="col">
+<div class="row greenWhyAilenGearISTheLeader">WHY ALIEN GEAR IS THE LEADER</div>
+<div class="row whyAGBigText">Every IWB Holster Can be customized for your perfect carry position and draw</div>
+<div class="row whyAGsmallText">Every Alien Gear IWB holster is designed to adjust the rie height, grip cant and retention so that the wearer can dial these settings to precisely the setting they desire.</div>
+</div>{{!-- End WhyAG COLUMN 1--}}
+
+<div class="col align-self-between justify-items-end whyAGImageDiv">
+<img src="pistolGreenBackpack.jpg" alt="IWB Holster in front of tactical backpack" width="100%">
+</div></div>{{!-- End WhyAG COLUMN 2--}}
+</div>{{!-- End WhyAG ROW --}}
+
+
+
+
+
+<div class="row align-self-between justify-items-end " id="magento">
+  <p><span class="yellowbackground">This is a screenshot of the magento shopping portal. We would hook into this using magento's perfered method, maybe AJAX. The experience will be customized using JQuery. To make sure settings stay the same across the site, I thinking of using a cookie, see <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie" target="blank">this documentation</a> for a reference. Still in the research phase though. </span></p>
+</div>
 {{!-- Still under construction below --}}
-{{!-- <div class="row  my-row" id="whyAG"></div>
-
-<div class="row  my-row" id="magento"></div>
-
 <div class="row  my-row" id="FandB"></div>
 
 <div class="row  my-row" id="slider"></div>
 
-<div class="row  my-row" id="featuredProduct"></div> --}}
+<div class="row  my-row" id="featuredProduct"></div>
 
 </div> {{!-- End container --}}
 
