roughest draft complete

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,107 +1,238 @@
 <!doctype html>
 <html lang="en">
-  <head>
-      {{!-- The front end of this site makes heavy use of the documentation and examples from bootstrap. http://getbootstrap.com/, Thier license can be found at https://creativecommons.org/licenses/by/3.0/ --}}
-    {{!-- <!-- Required meta tags --> --}}
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    {{!-- <!-- Bootstrap CSS --> --}}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-<link rel="stylesheet" href="style.css">
-    <title>Concealed Carry Holsters | Concealment Holsters | Alien Gear Holsters</title>
-  </head>
+<head>
+  {{!-- The front end of this site makes heavy use of the documentation and examples from bootstrap. http://getbootstrap.com/, Thier license can be found at https://creativecommons.org/licenses/by/3.0/ --}}
+  {{!-- <!-- Required meta tags --> --}}
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  {{!-- <!-- Bootstrap CSS --> --}}
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
+  <title>Concealed Carry Holsters | Concealment Holsters | Alien Gear Holsters</title>
+</head>
+
 <body>
-<div class="container my-container">
+  <div class="container my-container">
 
-<div class="row my-row" id="intro">
-{{!-- This is the top row from the example PDF. It is split into 3 columns --}}
-<div class="col">
-<div class="row rowLogoAndNavBar">
-<div class="col alienGearLogo"></div>
-<div class="col-sm-7 my-col navbarcell">
-<ul id="navbarlist">
-  <li class="navbarwhiteLinks" >SEARCH BY GUN </li>
-  <li class="navbarwhiteLinks">SHOP NOW</li>
-  <span id="extraSpace"> </span>
-  <li class="navbargreyLinks">Reviews</li>
-  <li class="navbargreyLinks">Blog</li>
-  <li class="navbargreyLinks">Videos</li>
-  <li class="navbargreyLinks" id="helplinkli">Help</li>
-  <li class="navbargreyLinks" id="contactuslinkli">Contact Us</li>
- <li class="navbargreyLinks searchlinkli" ></li>
- <li class="navbargreyLinks userli" ></li>
- <li class="navbargreyLinks checkoutli" ></li>
-</ul>
-</div>{{!-- End navbarlist --}}
-</div>{{!-- End rowLogAndNavBar --}}
-<div class="row ">
-  <div class="col IWBHolsters align-self-end">
-    IWB Holsters
-  </div>
-</div>
-<div class="row ">
-<div class="col IWBsubTitle align-self-end">
-<p>The most advanced, most comfotable, most</p>
-<p>modluar holsters you'll ever wear.</p>
-</div>
-</div>
-
-
-<div class="row rowGreenLink">
-  <div class="col">
-    <a href="/test">SHOP ALL HOLSTERS</a>
-  </div>
-</div>
-
-</div>{{!-- End of column for intro row --}}
-</div>{{!-- End of intro --}}
+    <div class="row my-row" id="intro">
+      {{!-- This is the top row from the example PDF. It is split into 3 columns --}}
+      <div class="col">
+        <div class="row rowLogoAndNavBar">
+          <div class="col alienGearLogo"></div>
+          <div class="col-sm-7 my-col navbarcell">
+            <ul id="navbarlist">
+              <li class="navbarwhiteLinks">SEARCH BY GUN </li>
+              <li class="navbarwhiteLinks">SHOP NOW</li>
+              <span id="extraSpace"> </span>
+              <li class="navbargreyLinks">Reviews</li>
+              <li class="navbargreyLinks">Blog</li>
+              <li class="navbargreyLinks">Videos</li>
+              <li class="navbargreyLinks" id="helplinkli">Help</li>
+              <li class="navbargreyLinks" id="contactuslinkli">Contact Us</li>
+              <li class="navbargreyLinks searchlinkli"></li>
+              <li class="navbargreyLinks userli"></li>
+              <li class="navbargreyLinks checkoutli"></li>
+            </ul>
+          </div>{{!-- End navbarlist --}}
+        </div>{{!-- End rowLogAndNavBar --}}
+        <div class="row ">
+          <div class="col IWBHolsters align-self-end">
+            IWB Holsters
+          </div>
+        </div>
+        <div class="row ">
+          <div class="col IWBsubTitle align-self-end">
+            <p>The most advanced, most comfotable, most</p>
+            <p>modluar holsters you'll ever wear.</p>
+          </div>
+        </div>
 
 
+        <div class="row rowGreenLink">
+          <div class="col">
+            <a href="/test">SHOP ALL HOLSTERS</a>
+          </div>
+        </div>
 
-<div class="row  my-row" id="whyAG">
-<div class="col">
-<div class="row greenWhyAilenGearISTheLeader">WHY ALIEN GEAR IS THE LEADER</div>
-<div class="row whyAGBigText">Every IWB Holster Can be customized for your perfect carry position and draw</div>
-<div class="row whyAGsmallText">Every Alien Gear IWB holster is designed to adjust the rie height, grip cant and retention so that the wearer can dial these settings to precisely the setting they desire.</div>
-</div>{{!-- End WhyAG COLUMN 1--}}
-
-<div class="col align-self-between justify-items-end whyAGImageDiv">
-<img src="pistolGreenBackpack.jpg" alt="IWB Holster in front of tactical backpack" width="100%">
-</div></div>{{!-- End WhyAG COLUMN 2--}}
-</div>{{!-- End WhyAG ROW --}}
+      </div>{{!-- End of column for intro row --}}
+    </div>{{!-- End of intro --}}
 
 
 
+    <div class="row" id="whyAG">
+      <div class="col">
+        <div class="row greenWhyAilenGearISTheLeader">WHY ALIEN GEAR IS THE LEADER</div>
+        <div class="row whyAGBigText">Every IWB Holster Can be customized for your perfect carry position and draw</div>
+        <div class="row whyAGsmallText">Every Alien Gear IWB holster is designed to adjust the rie height, grip cant and
+          retention so that the wearer can dial these settings to precisely the setting they desire.</div>
+      </div>{{!-- End WhyAG COLUMN 1--}}
+
+      <div class="col align-self-between justify-items-end whyAGImageDiv">
+        <img src="pistolGreenBackpack.jpg" alt="IWB Holster in front of tactical backpack" width="100%">
+      </div>
+    </div>{{!-- End WhyAG COLUMN 2--}}
+  </div>{{!-- End WhyAG ROW --}}
 
 
-<div class="row align-self-between justify-items-end " id="magento">
-  <p><span class="yellowbackground">This is a screenshot of the magento shopping portal. We would hook into this using magento's perfered method, maybe AJAX. The experience will be customized using JQuery. To make sure settings stay the same across the site, I thinking of using a cookie, see <a href="https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie" target="blank">this documentation</a> for a reference. Still in the research phase though. </span></p>
-</div>
-{{!-- Still under construction below --}}
-<div class="row  my-row" id="FandB"></div>
 
-<div class="row  my-row" id="slider"></div>
 
-<div class="row  my-row" id="featuredProduct"></div>
 
-</div> {{!-- End container --}}
+  <div class="row" id="magento">
+    <p><span class="yellowbackground">This is a screenshot of the magento shopping portal. We would hook into this using
+        magento's perfered method, maybe AJAX. The experience will be customized using JQuery. To make sure settings
+        stay the same across the site, I thinking of using a cookie, see <a
+          href="https://developer.mozilla.org/en-US/docs/Web/API/Document/cookie" target="blank">this documentation</a>
+        for a reference. Still in the research phase though. </span></p>
+  </div>{{!-- End Row magento --}}
 
-    {{!-- <!-- Optional JavaScript -->
+
+  <div class="row  FandB">
+    <div class="col" id="colFandB">
+      <div class="row FandB_Header justify-content-center">Features and Benefits</div>
+      <div class="row FandB_SubTitle justify-content-center">PREMIUM MATERIALS AND PREMIUM CRAFTSMANSHIP</div>
+
+      <div class="row FandB_Content ">
+
+        <div class="col-3 FandB_Image">
+          <img src="coolventNeopreneLogoWhite.png" alt="Cool Vent Neoprene Logo" id="coolVentNeopreneLogoWhite">
+          <p id="coolventNeopreneImageTextGreen">CoolVent Neoprene</p>
+          <p id="coolventNeopreneImageTextWhite">Every IWB holster is produced with our unique CoolVent Neoprene to help
+            keep you cool where you need it most.</p>
+        </div>{{!-- End coolventNeopreneImage column --}}
+
+        <div class="col-9 FandB_textblockscol">
+          <div class="row FandB_textblockscol_row1 ">
+            <div class="col coolventDescript">
+              <img src="coolventNeopreneLogoDark.png" alt="Cool Vent Neoprene Logo" class="FandB_logos">
+              <p id="coolventDescriptTextGreen" class="FandBDescriptHeader">CoolVent Neoprene</p>
+              <p id="coolventDescriptTextWhite" class="FandBDescriptText">Using sweat-wicking technology, this
+                perforated neoprene will keep you
+                cool and dry. This breathable material covers all previously exposed concealed carry holster hardware,
+                puting a soft, breathalbe layer between you and your firearm</p>
+            </div>
+            <div class="col enhancedFlexDescript">
+              <img src="enhancedFlexibilityLogo.png" alt="Enhanced Flexibility Logo" class="FandB_logos">
+              <p id="enhancedFlexDescriptTextGreen" class="FandBDescriptHeader">Enhanced Flexibility</p>
+              <p id="enhancedFlexDescriptTextWhite" class="FandBDescriptText">With its single mounting point, the
+                all-new IWB holster base offers
+                a wider range of flex and imporved comfort. Its design requires zero break-in time, so you can carry
+                comfortably from the beginning.</p>
+            </div>
+          </div>{{!-- End FandB_textblockscol_row1--}}
+          <div class="row FandB_textblockscol_row2 ">
+            <div class="col steelCoreDescript">
+              <img src="steelCoreLogo.png" alt="Steel Core Logo" class="FandB_logos">
+              <p id="steelCoreDescriptTextGreen" class="FandBDescriptHeader">Steel Core Holster Retention</p>
+              <p id="steelCoreDescriptTextWhite" class="FandBDescriptText">The patent=protected design gives the
+                ShapeShift an extra layer of
+                retention and stability to ShapeShift AIWB, Belt Slide and IWB concealed carry holsters. Embedded
+                between the soft neoprene backer and durable thermo elastomer surface, this grip of steel serves as a
+                flexible backbone to the entire gun holster.</p>
+
+            </div>
+            <div class="col ballisticNylonDescript">
+              <img src="ballisticNylonLogo.png" alt="Ballistic Nylon Logo" class="FandB_logos">
+              <p id="ballisticNylonDescriptTextGreen" class="FandBDescriptHeader">Steel Core Holster Retention</p>
+              <p id="ballisticNylonDescriptTextWhite" class="FandBDescriptText">The patent protected design gives the
+                ShapeShift an extra layer of
+                retention and stability to ShapeShift AIWB, Belt Slide and IWB concealed carry holsters. Embedded
+                between the soft neoprene backer and durable thermo elastomer surface, this grip of steel serves as a
+                flexible backbone to the entire gun holster.</p>
+
+
+
+            </div>
+          </div>{{!-- End FandB_textblockscol_row2--}}
+
+        </div>{{!-- End  FandB_textblockscol--}}
+
+      </div> {{!-- End row  FandB_Content--}}
+
+
+    </div>{{!-- End Column FandB --}}
+  </div>{{!-- End row FandB --}}
+
+
+
+
+  <div class="row  my-row" id="slider">
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="slider1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="slider1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="slider1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="slider1.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="slider1.jpg" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+  </div> {{!-- End Row Slider --}}
+
+
+
+  <div class="row  my-row" id="featuredProduct">
+    <div class="col videoCol align-items-center">
+      <img src="mockVideo.jpg" alt="the video would go here" width="500px" id="mockVideo">
+    </div>
+
+    <div class="col">
+      <div class="row featuredProductGreenText">FEATURED PROCUCT</div>
+      <div class="row featuredProductBigText">A New Standard Of IWB Concealed Carry Holster Comfort.</div>
+      <div class="row featuredProductSmallText">Inside the waistband or IWB holsters are the standard for concealed
+        carry. Alien Gear's IWB holsters are designed to conceal easily but carry comfotably, so you can carry all day
+        without the typical pains of carrying with lesser quality holsters. We design our holusters to last for decades
+        of use, and to be adjustable so you can set the carry position and holster retention to your exact preference.
+      </div>
+    </div>
+  </div>{{!-- End row featuredProduct --}}
+
+  </div> {{!-- End container --}}
+
+  {{!-- <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS --> --}}
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> 
-   <script>
-  $(document).ready(function () {
-    
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
+    integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
+    integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script>
+    $(document).ready(function () {
 
-  })//end document.ready
-    </script>
+$.each( $('*'), function() { 
+    if( $(this).width() > $('body').width()) {
+        console.log("Wide Element: ", $(this), "Width: ", $(this).width()); 
+    } 
+});
+    })//end document.ready
+  </script>
 
 
 
 
-  </body>
+</body>
+
 </html>
-
