--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,3 @@
-.my-col{
-}
-
-.my-row{
- 
- 
-}
 
 
 
@@ -208,6 +201,10 @@ Why AG is the leader block
 ========================================================
  */
 
+#whyAG{
+    width:100%;
+}
+
 .whyAGImageDiv{
     background-color: red;
     margin-top:5rem;
@@ -261,8 +258,8 @@ Magento
  */
 
  #magento{
-    min-height:100vh;
-    min-width:100vh;
+    min-height:50rem;
+    width:100%;
     background-image:url('magentoScreenShot.jpg');
     background-repeat:no-repeat;
     background-size:contain;
@@ -280,4 +277,185 @@ Magento
 
  .yellowbackground{
      background-color:yellow;
+ }
+
+ /* 
+========================================================
+FandB (Features and Benefits)
+========================================================
+ */
+
+.FandB{
+    width:100%;
+    background-color:#eaeded;
+    padding-bottom:5em;
+}
+
+.FandB_Header{
+    padding-top:3rem;
+    text-align:center;
+    font-weight: lighter;
+    font-size:2.5em;
+}
+
+.FandB_SubTitle{
+    padding-top:1rem;
+    text-align:center;
+    font-weight: bold;
+    font-size:.8em;
+    color:#63ce4f;
+    padding-bottom:2rem;
+}
+
+.FandB_Content{
+    
+}
+
+.FandB_Image{
+    height: 100%;
+    background-image:url('CoolVentNeoprene.jpg');
+    background-repeat:no-repeat;
+    background-size:cover;
+    display:block;
+    padding-left:3rem;
+    text-align: left end;
+}
+
+
+#coolVentNeopreneLogoWhite{
+    margin-top:23rem;
+    height:3rem;
+}
+
+#coolventNeopreneImageTextGreen{
+    color:#336626;
+    font-weight: lighter;
+    font-size:1.5em;
+    margin-top:1rem;
+    margin-bottom:0;
+}
+
+#coolventNeopreneImageTextWhite{
+    color:white;
+    font-weight: lighter;
+    font-size:1em;
+}
+
+.FandB_textblockscol{
+    padding-top:1rem;
+}
+
+
+.FandB_textblockscol_row1{
+    padding:1rem;
+}
+
+.coolventDescript{
+ 
+  
+}
+
+.FandB_logos{
+    margin-top:1rem;
+    height:2rem;
+}
+
+.FandBDescriptText{
+font-size:.8em;
+}
+.FandBDescriptHeader{
+    color:#336626;
+    font-weight: lighter;
+    font-size:1.5em;
+    margin-top:1rem;
+    margin-bottom:0;
+}
+
+#coolventDescriptTextGreen{
+
+}
+
+#coolventDescriptTextWhite{
+
+}
+
+.enhancedFlexDescript{
+}
+
+.FandB_textblockscol_row2{
+    padding:1rem;
+}
+
+.steelCoreDescript{
+}
+
+.ballisticNylonDescript{
+
+}
+
+
+ /* 
+========================================================
+Slider
+========================================================
+ */
+#slider{
+    width:100%;
+    background-color:#eaeded;
+    padding-bottom:3rem;
+}
+
+
+.carousel-indicators li{
+    width: .7em;
+    height: .7em;
+    border-radius:100%;
+}
+
+.carousel-indicators .active{
+background-color:#63ce4f;
+}
+
+ /* 
+========================================================
+Featured Product
+========================================================
+ */
+#featuredProduct{
+    width:100%;
+    padding-top:3rem;
+    padding-bottom:3rem;
+}
+ .videoCol{
+
+ }
+
+ #mockVideo{
+     
+ }
+
+ .featuredProductGreenText{
+    font-family: Arial, Helvetica, sans-serif;
+    color:#63ce4f;
+    font-size:.8em;
+    margin-bottom:2rem;
+ }
+
+ .featuredProductBigText{
+    font-weight: lighter;
+    font-size:1.8em;
+    margin-top:0rem;
+    margin-bottom:0rem;
+    margin-right:3rem;
+    padding-top:1rem;
+    padding-right:10rem;
+ }
+
+ .featuredProductSmallText{
+    font-weight: lighter;
+    margin-top:0rem;
+    margin-bottom:0rem;
+    margin-right:3rem;
+    padding-top:1rem;
+    padding-right:10rem; 
  }
